Implement fluent parser & start migration
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>